# OSG_tutorial

./: CMakeLists.txt  OSG_Tutorial_notes.aux  OSG_Tutorial_notes.tex  OSG_Tutorial_notes.toc  helloworld_osgstyle.cpp
Chapter03/: main.cpp
Chapter03/TimeForAction-MonitoringCountedObjects/: CMakeLists.txt  LogFileHandler.h  MonitoringTarget.h  main.cpp
Chapter04/P64_simple_objects/: main.cpp
Chapter04/P68_colored_quad/: main.cpp
Chapter04/P73_octahedron/: main.cpp
Chapter04/P76_cube_pyramid/: main.cpp
Chapter04/P78_tesselating/: CMakeLists.txt  main.cpp
Chapter04/P82_collecting_triangle_faces/: main.cpp
Chapter04/P87_OpenGL_teapot/: CMakeLists.txt  main.cpp
Chapter05/P101/: main.cpp
Chapter05/P101_rewrite/: main.cpp
Chapter05/P105/: main.cpp
Chapter05/P108/: main.cpp
Chapter05/P110/: main.cpp
Chapter05/P113/: main.cpp
Chapter05/P118/: .main.cpp.swp  CMakeLists.txt  main.cpp
Chapter05/P96/: main.cpp
Chapter06/P126/: main.cpp
Chapter06/P129_override_protected_flags/: main.cpp
Chapter06/P134_fog/: main.cpp
Chapter06/P137_light_sources_scene/: main.cpp
Chapter06/P143_load_apply_2Dtextures/: main.cpp
Chapter06/P148_translucent_effect/: main.cpp
Chapter06/P154_cartoon_cow/: main.cpp
Chapter06/P158_bezier/: main.cpp
Chapter07/P168_HUD_camera/: .main.cpp.swp  main.cpp
Chapter07/P172_custom_sim_loop/: main.cpp
Chapter07/P176_mult_scenes_at_once/: main.cpp
Chapter07/P180/: main.cpp
Chapter07/P183_anaglyph_scene/: main.cpp
Chapter07/P186_aircrafts_loaded_terrain/: main.cpp
Chapter08/P195_switch_nodes_update_traversal/: main.cpp
Chapter08/P199_drawing_geometry_dynamically/: CMakeLists.txt  main.cpp
Chapter08/P205_making_use_of_animationpath/: main.cpp
Chapter08/P209_fading_in/: main.cpp
Chapter11/P297_cessna_description/: CMakeLists.txt  main.cpp
(+6 files in other folders)
